# koe-device

./: .gitignore  BUY_NOW.md  CLAUDE.md  CONTRIBUTING.md  DOMAIN_PLAN.md  Dockerfile  LICENSE  ORDER_NOW.md  README.ja.md  README.md  ZAMNA-HAWAII-EQUIPMENT.md  fly.toml  run.sh
.github/workflows/: ci.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
codec/: README.md
codec/decoder/: Cargo.toml
codec/decoder/src/: bitstream.rs  lib.rs  mdct.rs  rvq.rs
codec/eval/: compare.py
codec/train/: codebooks.h  codebooks_music.h  codebooks_v2.h  koe_codec.py  koecodec_music.json  koecodec_v2.json  neural_decoder.py  requirements.txt  train_real.py  train_v3.py
dashboard/: Cargo.toml  Dockerfile  fly.toml
dashboard/.github/workflows/: deploy.yml
dashboard/src/: main.rs
dashboard/static/: app.js  dashboard.html  dashboard.js  embed.html  index.html  soluna.js  style.css
docs/: 3d.html  CNAME  STRIPE-SETUP.md  admin.html  api.html  app.html  archive.html  artist.html  brain.html  business.html  busker.html  busker.webmanifest  classroom.html  coin.html  compare.html  consent.html  crowd.html  dashboard-seed.html  dashboard.html  demo-storyboard.md  design.html  device-dashboard.html  docs.html  family.html  fill.html  fulfillment-service.md  gallery.html  guide-v2.html  guide.html  index-legacy.html  index.html  ja.html  key.html  koe-software.html  led-controller.html  manifest.json  moji.html  og-app.html  orchestra.html  order-success.html  (+33 more)
docs/app/: index.html
docs/movie/: index.html
enclosure/: SPEC.md  pick-case.scad
firmware/: Cargo.toml  build.rs  deploy-ota.sh  partitions.csv  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/amp/: Cargo.toml  sdkconfig.defaults
firmware/amp/.cargo/: config.toml
firmware/amp/src/: api.rs  audio.rs  led.rs  lib.rs  main.rs
firmware/components/audio/: mod.rs
firmware/components/led/: mod.rs
firmware/components/soluna/: mod.rs
firmware/demo/: Cargo.toml  README.md  sdkconfig.defaults
firmware/demo/.cargo/: config.toml
firmware/demo/src/: main.rs
firmware/main/: main.rs
firmware/src/: api.rs  audio.rs  ble.rs  cloud.rs  led.rs  main.rs  main_full.rs  ota.rs  provision.rs  soluna.rs  wakeword.rs
firmware/src_full/: audio.rs  battery.rs  ble.rs  cloud.rs  led.rs  ota.rs
firmware/stone/: .gitignore  CMakeLists.txt  prj.conf
firmware/stone/boards/: nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay
firmware/stone/src/: ble_audio.c  ble_audio.h  led.c  led.h  main.c  tap.c  tap.h
firmware/tasks/: todo.md
hardware/: VALIDATION_REPORT.md  gen_coin_lite_v2.py  gen_fill.py  gen_hub.py  gen_hub_v2.py  gen_pcb.py  gen_pcb_14mm.py  gen_pcb_lv.py  gen_pro.py  gen_pro_v2.py  gen_stage.py  gen_sub.py  generate_gerbers.py  generate_gerbers_coin_lite.py
hub/: Cargo.toml  Makefile  QUICKSTART-PI.md  QUICKSTART.md  flash-sd.sh  koe-amp.c  koe-amp.py  koe-amp.service  setup-pi.sh  setup.sh
hub/balena/: Dockerfile  README.md  balena.yml  docker-compose.yml  koe-amp.py
hub/src/: effects.rs  lib.rs  main.rs  mixer.rs  receiver.rs  streamer.rs  translate.rs
hub/tests/: e2e.rs
manufacturing/: README.md  assembly-guide.md  fulfill.sh  manual-parts.md  order-all.md  order-cheap.md  order-dk-cases.md  order.py  parts-for-prototype.md  prototype-checklist.md
regulatory/: README.md
scripts/: automate-all.sh  generate-demo.sh  post-sns.sh  render_stl_thumbs.py
server/: Cargo.toml
server/src/: main.rs
site/: index.html  ja.html
stage/: README.md  setup.sh  soluna-server.py
tasks/: amuse-outreach.md  bom-pi5.md  bom-prototype.md  design-system.md  hawaii-deploy.md  hawaii-hardware.md  keynote.md  koe-launch.md  koe-song.md  master-plan.md  oki-brief.md  personas.md  pon-integration.md  prd-koe.md  rfp-cnc.md  rfp-nordic.md  sessions-consent-form.md
tests/: README.md  test_api.sh
tools/: README.md  channel-daemon.sh  channel-dj.py  demo-show.json  guitar-stream.py  led-send.py  led-show.py  ota-broadcast.py
(+310 files in other folders)
