[package]
name = "soluna-dashboard"
version = "0.1.0"
edition = "2021"
description = "Soluna web dashboard & audio player — WebSocket↔UDP bridge"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
socket2 = { version = "0.5", features = ["all"] }
