[package]
name = "koe-device"
version = "0.6.0"
edition = "2021"
authors = ["EnablerDAO"]
description = "Koe+Soluna — Voice AI + Distributed Audio Sync"

[dependencies]
esp-idf-svc = "0.50"
esp-idf-hal = "0.45"
esp-idf-sys = { version = "0.36", features = ["binstart"] }
log = "0.4"

[build-dependencies]
embuild = "0.33"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
