[package]
name = "koe-hub"
version = "0.1.0"
edition = "2021"
description = "Koe Hub — Real-time audio mixer & streaming server for Pi CM5"

[[bin]]
name = "koe-hub"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5"
reqwest = { version = "0.12", features = ["json", "multipart"] }
thiserror = "2"

[profile.release]
opt-level = 2
lto = true
