[package]
name = "koe-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "koe-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["net"] }
tower-http = { version = "0.5", features = ["fs", "compression-gzip", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
dashmap = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
