[package]
name = "koecodec"
version = "0.1.0"
edition = "2021"
description = "KoeCodec decoder — ESP32-native neural-enhanced audio codec"

[features]
default = ["std"]
std = []
# no_std for ESP32 embedded use
esp32 = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
