[package]
name = "koe-firmware"
version = "0.3.1"
edition = "2021"
resolver = "2"

[lib]
name = "koe_firmware"
path = "src/lib.rs"

[[bin]]
name = "koe-firmware"
path = "src/main.rs"
harness = false

[profile.release]
opt-level = "s"
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1

[dependencies]
esp-idf-svc = { version = "0.52", default-features = false, features = ["std", "alloc", "embassy-sync", "critical-section"] }
esp-idf-hal = { version = "0.46", default-features = false }
embedded-svc = "0.29"
log = { version = "0.4", default-features = false }
anyhow = { version = "1", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
heapless = "0.9"

[build-dependencies]
embuild = { version = "0.32", features = ["espidf"] }
